prevent the chart__head to overflow the screen

--- a/src/Components/Chart/style.scss
+++ b/src/Components/Chart/style.scss
@@ -10,6 +10,7 @@
       // flex-direction: column;
       align-items: start;
       gap: 10px;
+      max-width: calc(100vw - 24px);
     }
 
     &--left {
